--- a/mydist/index.html
+++ b/mydist/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack</title>
-    <script src="analytics.js"></script>
+    <script src="analytics.mybundle.js"></script>
 </head>
 <body>
-    <div>
-        <h1>Webpack course</h1>
-    </div>
-
-    <script src="Post.js"></script>
-    <script src="index.js"></script>
+<div>
+    <h1>Webpack course</h1>
+</div>
+<script src="main.mybundle.js"></script>
 </body>
 </html>
