was added loaders for css :style and css-loader

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <div>
-    <h1>Webpack course</h1>
+    <div class="container">
+        <h1>Webpack course</h1>
+    </div>
 </div>
 </body>
 </html>
