--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 <div>
     <div class="container">
         <h1>Webpack course :)</h1>
+
+        <div class="logo"> </div>
     </div>
 </div>
 </body>
