--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
 <body>
 <div>
     <div class="container">
-        <h1>Webpack course :)</h1>
+        <h1>Webpack courses :)</h1>
 
-        <div class="logo"> </div>
+        <div class="logo"></div>
+        <h1>test</h1>
     </div>
 </div>
 </body>
