maybe work the dev server maybe not. Xz

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <h1>Webpack courses :)</h1>
 
         <div class="logo"></div>
-        <h1>test</h1>
+        <h1>test1</h1>
     </div>
 
     <pre></pre>
